{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 22,
  "lineage": "03d6980b-d193-311e-23f6-20dcc7965abb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dac91fbe8fb4652c",
            "route_table_id": "rtb-04961a6550a7d55c8",
            "subnet_id": "subnet-05aaa829163fe0855"
          },
          "dependencies": [
            "module.route_table.aws_route_table.private",
            "module.subnet_private.aws_subnet.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b2d50438ca745bf",
            "route_table_id": "rtb-04961a6550a7d55c8",
            "subnet_id": "subnet-0ffe1754af459d650"
          },
          "dependencies": [
            "module.route_table.aws_route_table.private",
            "module.subnet_private.aws_subnet.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004c4db359030c8ea",
            "route_table_id": "rtb-0d2ab1e5fd3573cc3",
            "subnet_id": "subnet-0b014bc57ca7058b4"
          },
          "dependencies": [
            "module.route_table.aws_route_table.public",
            "module.subnet_public.aws_subnet.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8d8524862785caf",
            "route_table_id": "rtb-0d2ab1e5fd3573cc3",
            "subnet_id": "subnet-09b81967a4dc642ff"
          },
          "dependencies": [
            "module.route_table.aws_route_table.public",
            "module.subnet_public.aws_subnet.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03fc7aca20f62b05f",
            "id": "r-rtb-0d2ab1e5fd3573cc31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d2ab1e5fd3573cc3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.route_table.aws_route_table.public",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:521825925159:route-table/rtb-04961a6550a7d55c8",
            "id": "rtb-04961a6550a7d55c8",
            "owner_id": "521825925159",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "example-private-rtb"
            },
            "tags_all": {
              "Name": "example-private-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b29930060078b40"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:521825925159:route-table/rtb-0d2ab1e5fd3573cc3",
            "id": "rtb-0d2ab1e5fd3573cc3",
            "owner_id": "521825925159",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03fc7aca20f62b05f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example-public-rtb"
            },
            "tags_all": {
              "Name": "example-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b29930060078b40"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_private",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:521825925159:subnet/subnet-05aaa829163fe0855",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.64.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05aaa829163fe0855",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "521825925159",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-subnet-private-1a"
            },
            "tags_all": {
              "Name": "example-subnet-private-1a"
            },
            "vpc_id": "vpc-06b29930060078b40"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:521825925159:subnet/subnet-0ffe1754af459d650",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.65.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ffe1754af459d650",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "521825925159",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-subnet-private-1c"
            },
            "tags_all": {
              "Name": "example-subnet-private-1c"
            },
            "vpc_id": "vpc-06b29930060078b40"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_public",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:521825925159:subnet/subnet-0b014bc57ca7058b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b014bc57ca7058b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "521825925159",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-subnet-public-1a"
            },
            "tags_all": {
              "Name": "example-subnet-public-1a"
            },
            "vpc_id": "vpc-06b29930060078b40"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:521825925159:subnet/subnet-09b81967a4dc642ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b81967a4dc642ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "521825925159",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-subnet-public-1c"
            },
            "tags_all": {
              "Name": "example-subnet-public-1c"
            },
            "vpc_id": "vpc-06b29930060078b40"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:521825925159:internet-gateway/igw-03fc7aca20f62b05f",
            "id": "igw-03fc7aca20f62b05f",
            "owner_id": "521825925159",
            "tags": {
              "Name": "example-igw"
            },
            "tags_all": {
              "Name": "example-igw"
            },
            "vpc_id": "vpc-06b29930060078b40"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:521825925159:vpc/vpc-06b29930060078b40",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-007be30dff332f98b",
            "default_route_table_id": "rtb-02708e6b4130878f3",
            "default_security_group_id": "sg-0b7a5e0bb303f5f11",
            "dhcp_options_id": "dopt-9dd8eafa",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06b29930060078b40",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02708e6b4130878f3",
            "owner_id": "521825925159",
            "tags": {
              "Name": "example"
            },
            "tags_all": {
              "Name": "example"
            }
          }
        }
      ]
    }
  ]
}